# MasterCPP

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  cpp_practice_exe  print_from_xml_exe  threads_exe
CppPractice/headers/: StudyConst.h  StudyPointers.h  Topics.h
CppPractice/src/: StudyConst.cpp  StudyPointers.cpp  Topics.cpp  main.cpp
PrintFromXml/headers/: XmlParser.h
PrintFromXml/src/: XmlParser.cpp  demo.xml  xmltest.cpp
